--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -71,7 +71,7 @@
           <section id="about-me">
                <h2 class="col-80 margin-auto">A Snippet About Me.</h2>
                <article class="col-40 col-left">
-                    <p>Hi there! My name is Katelyn Dawn Sickles, but you can call me Katelyn, Katie, Dawn, and your new hairstylist. Based in Vancouver, WA, I graduated from Aveda in 2021 and have been making hair dreams come true ever since. As a people-first hair stylist, I am happy to do whatever it takes to get you to your goals, but I specialize in fantasy colors, unique shave designs, and intricate braids.</p>
+                    <p>Hi there! My name is Katelyn Dawn Sickles, but you can call me Katelyn, Katie, Dawn, and your new hairstylist. Based in Vancouver, WA, I graduated from Aveda in 2021 and have been making hair dreams come true ever since. As a people-first hair stylist, I am happy to do whatever it takes to get you to your goals, but I specialize in fantasy colors, unique shave designs, and intricate braids. I am your hairy godmother.</p>
 
                     <!-- PHOTO -->
                     <section id="katie-chat-photo"></section>
