--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -92,6 +92,7 @@
                          <li>Surface</li>
                          <li>Joico</li>
                          <li>Pravana</li>
+                         <li>Pulp Riot</li>
                     </ul>
                     <br>
 
