--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -218,7 +218,7 @@
                     <p>Let's make your hair dreams come true. Send me a message over Instagram, shoot me an email, or find me on LinkedIn.</p>
 
                     <a href="https://www.instagram.com/beautybykatelyndawn/" target="_blank"><button class="primary-btn">Instagram</button></a>
-                    <a href="#" target="_blank"><button class="primary-btn">Email</button></a>
+                    <a href="mailto:beautybykatelyndawn@gmail.com" target="_blank"><button class="primary-btn">Email</button></a>
                     <a href="#" target="_blank"><button class="primary-btn">LinkedIn</button></a>
 
                </article>
@@ -230,7 +230,7 @@
      <!--Footer-->
      <footer>
           <a href="https://www.instagram.com/beautybykatelyndawn/" target="_blank" class="instagram-btn"></a>
-          <a href="#" target="_blank" class="email-btn"></a>
+          <a href="mailto:beautybykatelyndawn@gmail.com" target="_blank" class="email-btn"></a>
           <a href="#" target="_blank" class="linkedin-btn"></a>
 
           <p id="copyright">Created by Kylie and Katelyn Sickles, 2024. All rights reserved.</p>
