--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -74,7 +74,7 @@
                     <p>Hi there! My name is Katelyn Dawn Sickles, but you can call me Katelyn, Katie, Dawn, and your new hairstylist. Based in Vancouver, WA, I graduated from Aveda in 2021 and have been making hair dreams come true ever since. As a people-first hair stylist, I am happy to do whatever it takes to get you to your goals, but I specialize in fantasy colors, unique shave designs, and intricate braids. I am your hairy godmother.</p>
 
                     <!-- PHOTO -->
-                    <section id="katie-chat-photo"></section>
+                    <section id="katie-chat-photo" alt="A photo of Katelyn Dawn with 1920's finger waves in her short blonde hair. She is standing in front of a reproduction copy of the art piece 'Tournee Du Chat Noir'."></section>
 
                </article>
 
@@ -115,8 +115,8 @@
                <!-- IMAGE -->
                <figure class="col-30 col-left">
                     <img-comparison-slider>
-                         <img slot="first" src="img/cut-before.jpg" />
-                         <img slot="second" src="img/cut-after.jpg" />
+                         <img slot="first" src="img/cut-before.jpg" alt="A client with long, waist-length hair." />
+                         <img slot="second" src="img/cut-after.jpg" alt="The same client as before with shoulder-length hair. It is noticibly shinier and healthier."/>
                     </img-comparison-slider>
                </figure>
 
