--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -248,6 +248,29 @@
        rel="stylesheet"
        href="https://cdn.jsdelivr.net/npm/img-comparison-slider@8/dist/styles.css"
      />
+     <script type="module">
+       // Import the functions you need from the SDKs you need
+       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
+       import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-analytics.js";
+       // TODO: Add SDKs for Firebase products that you want to use
+       // https://firebase.google.com/docs/web/setup#available-libraries
+
+       // Your web app's Firebase configuration
+       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+       const firebaseConfig = {
+         apiKey: "AIzaSyD0wwKgtplPlGxA8C2C2O-ImUTRerhvRyg",
+         authDomain: "portfolio-db88d.firebaseapp.com",
+         projectId: "portfolio-db88d",
+         storageBucket: "portfolio-db88d.appspot.com",
+         messagingSenderId: "892252117382",
+         appId: "1:892252117382:web:4e517721c14da0a2b2b407",
+         measurementId: "G-3TNG29H01G"
+       };
+
+       // Initialize Firebase
+       const app = initializeApp(firebaseConfig);
+       const analytics = getAnalytics(app);
+     </script>
 
 
 </body>
