--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -88,22 +88,25 @@
                     </ul><br>
                     <h4>Brands I love</h4>
                     <ul>
-                         <li>Aveda</li>
-                         <li>Surface</li>
-                         <li>Joico</li>
-                         <li>Pravana</li>
+                         <li>Surface Hair</li>
                          <li>Pulp Riot</li>
+                         <li>Aveda</li>
+                         <li>Pravana semis</li>
+                         <li>Joico semis</li>
                     </ul>
                     <br>
 
                     <h4>My Skills</h4>
                     <ul>
-                         <li>Masculine and Feminine Cuts</li>
-                         <li>Shaved Designs</li>
-                         <li>Natural and Fantasy Colors</li>
+                         <li>Precision Haircuts on all hair types </li>
+                         <li>Buzzcut designs</li>
+                         <li>Color matching</li>
+                         <li>fantasy color</li>
+                         <li>Grey Blending</li>
                          <li>Highlights</li>
-                         <li>Braids</li>
                          <li>Balyage</li>
+                         <li>Braiding</li>
+                         <li>Formal styling</li>
                     </ul>
                     <br>
                     
