--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -118,15 +118,15 @@
                <!-- IMAGE -->
                <figure class="col-30 col-left">
                     <img-comparison-slider>
-                         <img slot="first" src="img/cut-before.jpg" alt="A client with long, waist-length hair." />
-                         <img slot="second" src="img/cut-after.jpg" alt="The same client as before with shoulder-length hair. It is noticibly shinier and healthier."/>
+                         <img slot="first" src="img/cut-before.jpg" alt="A client with long, waist-length hair with no layering." />
+                         <img slot="second" src="img/cut-after.jpg" alt="The same client as before with shoulder-length layered hair. It has a simple blowout style."/>
                     </img-comparison-slider>
                </figure>
 
                <!-- SECTION TEXT -->
                <article class="col-40 col-right">
-                    <h2 class="auto-width">Section Heading</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac auctor augue mauris augue neque gravida in fermentum et. Cras fermentum odio eu feugiat pretium nibh ipsum. Placerat orci nulla pellentesque dignissim enim sit amet.</p>
+                    <h2 class="auto-width">Hair cutting</h2>
+                    <p>Creating new haircuts and styles to bring out your inner self has always been a passion of mine. No matter the cut I will always do my best to help you find a style that not only works well with your day to day life, but helps you feel your best.</p>
                </article>
           </section>
           <!-- END OF FIRST PORTFOLIO ITEM ----------------------------------->
