--- a/Katie_Portfolio/index.html
+++ b/Katie_Portfolio/index.html
@@ -135,15 +135,15 @@
                <!-- IMAGE -->
                <figure class="col-30 col-right">
                     <img-comparison-slider>
-                         <img slot="first" src="img/curls-before.jpg" />
-                         <img slot="second" src="img/curls-after.jpg" />
+                         <img slot="first" src="img/curls-before.jpg" alt="a client with above the shoulder white-grey curly hair" />
+                         <img slot="second" src="img/curls-after.jpg" alt="same client with blonde lowlights added to blend with the grey to create a more dimensional color. styled with natural curl texture." />
                     </img-comparison-slider>
                </figure>
 
                <!-- SECTION TEXT -->
                <article class="col-40 col-left">
-                    <h2 class="auto-width">Section Heading</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac auctor augue mauris augue neque gravida in fermentum et. Cras fermentum odio eu feugiat pretium nibh ipsum. Placerat orci nulla pellentesque dignissim enim sit amet.</p>
+                    <h2 class="auto-width">Grey Blending</h2>
+                    <p>Having grey hair and embracing it dosn't mean you can't add some color or depth to it. Certain color lines and techniques are built for blending and enhancing your natural look, it's all about finding what works best for you. </p>
                </article>
           </section>
           <!-- END OF SECOND PORTFOLIO ITEM ----------------------------------->
